add memo success

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.gamesuit">
+    package="com.example.binarchapter6">
 
     <application
         android:allowBackup="true"
@@ -10,18 +10,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity"></activity>
-        <activity android:name=".SplashScreenActivity">
+        <activity android:name="com.example.binarchapter6.activity.ProfileActivity" />
+        <activity android:name="com.example.binarchapter6.activity.LoginActivity" />
+        <activity android:name="com.example.binarchapter6.activity.SplashScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity" />
-        <activity android:name=".welcome.WelcomeActivity" />
-        <activity android:name=".areaMain.PemainVsCpu" />
-        <activity android:name=".areaMain.PemainVsPemain" />
+        <activity android:name="com.example.binarchapter6.activity.MainActivity" />
+        <activity android:name="com.example.binarchapter6.welcome.WelcomeActivity" />
+        <activity android:name="com.example.binarchapter6.areaMain.PemainVsCpu" />
+        <activity android:name="com.example.binarchapter6.areaMain.PemainVsPemain" />
     </application>
 
 </manifest>
